--- a/App.config
+++ b/App.config
@@ -4,7 +4,7 @@
     </configSections>
     <connectionStrings>
         <add name="FlowerShop.Properties.Settings.db_flowershopConnectionString"
-            connectionString="Data Source=FISH\FISH2022;Initial Catalog=db_flowershop;Integrated Security=True;Encrypt=True;TrustServerCertificate=True"
+            connectionString="Data Source=TRUNG\SQLEXPRESS;Initial Catalog=db_flowershop;Integrated Security=True;Encrypt=True;TrustServerCertificate=True"
             providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup> 
