--- a/FlowerShop.csproj
+++ b/FlowerShop.csproj
@@ -255,6 +255,18 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SanPham\QuanLyDanhMuc.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="SanPham\QuanLyDanhMuc.Designer.cs">
+      <DependentUpon>QuanLyDanhMuc.cs</DependentUpon>
+    </Compile>
+    <Compile Include="SanPham\QuanLyHinhAnh.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="SanPham\QuanLyHinhAnh.Designer.cs">
+      <DependentUpon>QuanLyHinhAnh.cs</DependentUpon>
+    </Compile>
     <Compile Include="SanPham\QuanLySanPham.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -364,6 +376,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="SanPham\QuanLyDanhMuc.resx">
+      <DependentUpon>QuanLyDanhMuc.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="SanPham\QuanLySanPham.resx">
       <DependentUpon>QuanLySanPham.cs</DependentUpon>
     </EmbeddedResource>
